@@ -4,8 +4,8 @@ start_dir=`pwd`
 cd `dirname "$0"`
 
 ./stop.sh
-JAVA_OPT="-server -d64 -Xms2G -Xmx5G -XX:+PrintGCDateStamps -XX:+PrintGCDetails -Xloggc:./gc.log"
-nohup java $JAVA_OPT -Dlogback.configurationFile=file:../conf/logback.xml -cp ../conf:../lib/* com.gonwan.restful.jersey.Application &> nohup.out &
+JAVA_OPT="-server -Xms2G -Xmx5G -XX:+PrintGCDetails -Xloggc:./gc.log"
+nohup java $JAVA_OPT -cp ../conf:../lib/* com.gonwan.restful.jersey.Application &> nohup.out &
 
 curr_dir=`pwd`
 fails=0
@@ -22,6 +22,5 @@ while [ $fails -le 3 ]; do
 done
 echo 'start error...'
 tail -n 15 nohup.out
-
 
 cd $start_dir
