@@ -4,8 +4,10 @@ start_dir=`pwd`
 cd `dirname "$0"`
 
 ./stop.sh
-JAVA_OPT="-server -d64 -Xms2G -Xmx5G -XX:+PrintGCDateStamps -XX:+PrintGCDetails -Xloggc:./gc.log"
-nohup java $JAVA_OPT -Dlogback.configurationFile=file:../conf/logback.xml -cp ../conf:../lib/* com.gonwan.restful.springboot.Application &> nohup.out &
+# define environment variable like SPRING_PROFILES_ACTIVE=prd for deployment environment.
+JAVA_OPT="-server -Xms2G -Xmx5G -XX:+PrintGCDetails -Xloggc:./gc.log -Djava.net.preferIPv4Stack=true"
+#JAVA_OPT="$JAVA_OPT -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.port=6060 -Djava.rmi.server.hostname=192.168.11.196"
+nohup java $JAVA_OPT -cp ../conf:../lib/* com.gonwan.restful.springboot.Application &> nohup.out &
 
 curr_dir=`pwd`
 fails=0
@@ -22,6 +24,5 @@ while [ $fails -le 3 ]; do
 done
 echo 'start error...'
 tail -n 15 nohup.out
-
 
 cd $start_dir
